src/PopupAddTask/Popup.scss
@import "../styled/variables.scss";

.wrapper__popup {
    position: absolute;
    width: 100vw;
    height: 100vh;
    background-color: rgba($color: #000000, $alpha: 0.5);
    z-index: 10001;
}
.popup__dash {
    width: 50%;
    height: 50%;
    display: flex;
    
    flex-direction: column;
    border-radius: 20px;
    padding: 10px;
    background-color: var(#{--components-background-default});
    position: relative;
    margin: 0 auto;
    top: 25%;
}
.text-field__input {
    &:focus {
        outline: none;
    }
    width: 40%;
    outline: 0;
    border-width: 0 0 2px;
    height: 2rem;
    background-color: var(#{--card-background-default});
    color: var(#{--text-color-default});
    border-color: #000000;
    border-radius: 10px 10px 0 0;
    padding: 1rem;
}
.text-field__textarea {
    &:focus {
        outline: none;
    }
    border: none;
    border-radius: 10px;
    background-color: var(#{--card-background-default});
    color: var(#{--text-color-default});
    padding: 1rem;
    resize:none;
    height:100%;
    
}

.popup__title {
    margin-bottom: 10px;
    align-items: center;
    display: flex;
    justify-content: center;
    color: $primary-color;
}

.popup__content {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 100%;
}
.popup__content__inputs {
    display: flex;
    width: 100%;
    justify-content: space-around;
    margin-bottom: 20px;
}

